2010-04-24  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.test: modify api of TclSpliceTailcall() 
	* generic/tclExecute.c:  to fix yieldTo, which had not survived 
	* generic/tclInt.h:      the latest mods to tailcall. Thanks kbk
	for detecting the problem.

2010-04-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tclUnixPort.h Fix [Bug #2991415] tclport.h #included before limits.h

2010-04-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclPlatDecls.h   Move TCHAR fallback typedef from tcl.h to
	* generic/tcl.h            tclPlatDecls.h (as suggested by dgp)
	* generic/tclInt.h         fix typo
	* generic/tclIOUtil.c      Eliminate various unnecessary
	* unix/tclUnixFile.c       type casts.
	* unix/tclUnixPipe.c
	* win/tclWinChan.c
	* win/tclWinFCmd.c
	* win/tclWinFile.c
	* win/tclWinLoad.c
	* win/tclWinPipe.c

2010-04-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclTest.c   Use function prototypes from the FS API.
	* compat/zlib/*       Upgrade to zlib 1.2.5

2010-04-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclExecute.c (TclExecuteByteCode): Improve commenting and
	reduce indentation for the Invocation Block.

2010-04-18  Donal K. Fellows  <dkf@users.sf.net>

	* doc/unset.n: [Bug 2988940]: Fix typo.

2010-04-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinPort.h:       Move inclusion of <tchar.h> from
	* generic/tcl.h:          tclPlatDecls.h to tclWinPort.h, where it
	* generic/tclPlatDecls.h: belongs. Add fallback in tcl.h, so TCHAR is
				  available in win32 always.

2010-04-15  Donal K. Fellows  <dkf@users.sf.net>

	* doc/try.n: [Bug 2987551]: Fix typo.

2010-04-14  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Linux platform identification:
	* library/platform/pkgIndex.tcl: Check /lib64 for existence of files
	* unix/Makefile.in: matching libc* before accepting it as base
	* win/Makefile.in:  directory. This can happen on weirdly installed